customed to use with Nuxt
customed to use with Nuxt

--- a/team-blue/conf/nginx.conf
+++ b/team-blue/conf/nginx.conf
@@ -14,8 +14,7 @@ http {
         server_name  localhost;
 
         location / {
-            root build;
-            index page.js;
+            root ./;
         }
     }
 }
