--- a/team-green/conf/nginx.conf
+++ b/team-green/conf/nginx.conf
@@ -14,8 +14,9 @@ http {
         server_name  localhost;
 
         location / {
-            root build;
-            index page.js;
+            root ./;
         }
+
     }
+
 }
